Closed
Bug 1796407
Opened 3 years ago
Closed 3 years ago
-Wunused-but-set-variable warning in NSS
Categories
(NSS :: Libraries, defect)
NSS
Libraries
Tracking
(Not tracked)
RESOLVED
FIXED
3.85
People
(Reporter: glandium, Assigned: glandium)
References
Details
Attachments
(1 file)
A new one from clang 15:
[task 2022-10-20T02:57:05.816Z] 02:57:05 ERROR - /builds/worker/checkouts/gecko/security/nss/lib/ssl/ssl3con.c:938:18: error: variable 'numEnabled' set but not used [-Werror,-Wunused-but-set-variable]
[task 2022-10-20T02:57:05.816Z] 02:57:05 INFO - unsigned int numEnabled = 0;
[task 2022-10-20T02:57:05.816Z] 02:57:05 INFO - ^
[task 2022-10-20T02:57:05.816Z] 02:57:05 INFO - 1 error generated.
| Assignee | ||
Comment 1•3 years ago
|
||
| Assignee | ||
Comment 2•3 years ago
|
||
Blocks: 1795245
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 3.85
You need to log in
before you can comment on or make changes to this bug.
Description
•