Bug 1796407 - Fix -Wunused-but-set-variable warning from clang 15. r=nss-reviewers,jschanck

Differential Revision: https://phabricator.services.mozilla.com/D159824

--HG--
extra : moz-landing-system : lando